delete total_tasks in config.py

--- a/app/index/view/index/check.html
+++ b/app/index/view/index/check.html
@@ -12,7 +12,7 @@
 <script>
 Apollo.list = {$list};
 Apollo.check_list = {$check_list};
-Apollo.total = {$Think.config.total_tasks};
+Apollo.total = {$total};
 Apollo.baseUrl		=	"__APP__";
 </script>
 <script src="__JS__/app/check.js"></script>
