--- a/app/index/view/index/admin.html
+++ b/app/index/view/index/admin.html
@@ -15,7 +15,7 @@ Apollo.list = {$list};
 Apollo.check_list = {$check_list};
 Apollo.admin_list = {$admin_list};
 Apollo.admin_list_change = {$admin_list_change};
-Apollo.total = {$Think.config.total_tasks};
+Apollo.total = {$total};
 Apollo.baseUrl		=	"__APP__";
 </script>
 <script src="__JS__/app/admin.js"></script>
