fix bug, and change the saved format

--- a/app/index/view/common/js.html
+++ b/app/index/view/common/js.html
@@ -29,7 +29,7 @@ Apollo.suffix		=	"";
 Apollo.task			=	{$task};
 Apollo.scene		=	"{$scene}";
 Apollo.reference	=	"{$reference}";
-Apollo.stroke       =   {$stroke};
+Apollo.sketch       =   {$sketch};
 Apollo.catefolder	=	"__FOLDER__";
 Apollo.boxs         =   "{$boxs}"
 Apollo.review       =   {$review};
