add new function show cur_obj_only, useless, reference

--- a/app/index/view/index/admin.html
+++ b/app/index/view/index/admin.html
@@ -6,9 +6,8 @@
 <!-- <img id="demo"></img> -->
 <h4>Current ID: <span id="cid">0</span></h4>
 
-<section id="markers">
-
-</section>
+<section id="markers"></section>
+    
 {include file="admin/js" /}
 <script>
 Apollo.list = {$list};
