fix bugs, and fuction upgrade

--- a/app/index/view/common/js.html
+++ b/app/index/view/common/js.html
@@ -38,6 +38,6 @@ Apollo.review       =   {$review};
 <script language="javascript" type="text/javascript" src="__JS__/app/myp5.js"></script>
 <script language="javascript" type="text/javascript" src="__JS__/app/layout.js"></script>
 <script language="javascript" type="text/javascript" src="__JS__/app/parameter.js"></script>
-<script language="javascript" type="text/javascript" src="__JS__/app/item.js"></script>
+<script language="javascript" type="text/javascript" src="__JS__/app/myclass.js"></script>
 <script language="javascript" type="text/javascript" src="__JS__/app/start.js"></script>
 <script language="javascript" type="text/javascript" src="__JS__/app/category.js"></script>
