--- a/app/index/view/index/index.html
+++ b/app/index/view/index/index.html
@@ -2,24 +2,29 @@
 {include file="common/js" /}
 
 <section id="apollo">
-    <div id="panel">
-        
+    <div id="panel">        
             <h1 id="scene_review">Scene {$task}</h1>  
-
             <div class="task-buttons">
                 <button id="load" style="width: 60px;height: 20px;">load</button>
                 <button id="save" style="width: 80px;height: 20px;">save</button>
-                </br> </br>
+                <br /> <br />
                 <button id="previous" style="width: 60px;height: 20px;">back</button>
                 <button id="next" style="width: 80px;height: 20px;">next</button>            
             </div>
+        
             <h1>object</h1>
-            <select id="objects">
+            <select id="objects" onkeydown="my_onkeydown()" >
                 <option disabled selected>object</option>
             </select>
-            
+            <script>
+            function my_onkeydown(e){
+                var evt = e || window.event;
+                if(68 === evt.keyCode){
+                    document.getElementById("objects").blur();
+                }
+            }
+            </script>
             <button id="add_object" style="width: 50px;height: 20px;">add</button>
-<!--             <button id="show_select" style="width: 50px;height: 20px;">show</button> -->
             <button id="delete_object" style="width: 50px;height: 20px;">delete</button>
 
             <br/>
@@ -42,7 +47,7 @@
                 <option disabled selected>select_stroke</option>
             </select>   
             <input type="checkbox" id="stroke_delete"/>delete
-            </br></br>
+            <br /br><br /br>
             <label id="lbl_cur">cur_num:0  </label>
             <label id="lbl_all">  all_num:0  </label>
 
@@ -56,7 +61,7 @@
                 <option value="100">100%</option>
                 <option value="66">>66%</option>
                 <option value="33">33%-66%</option>
-                <option value="0"><33%</option>
+                <option value="0"> <33% </option>
             </select>
             <select id="direction">
                 <option value="-1">direction</option>
@@ -70,7 +75,7 @@
                 <option value="rf">right front</option>
                 <option value="n">none</option>
             </select>   
-            </br></br>
+            <br/><br/>
             <select id="similarity">
                 <option value="-1">similarity</option>
                 <option value="100">100%</option>
@@ -89,9 +94,9 @@
             <div class="clear">
                 <h2>show</h2>
             </div>
-            <input type="checkbox" id="cb_cur" value="false"/>cur_obj_only
-            <input type="checkbox" id="cb_useless" value="true"/>useless
-            <input type="checkbox" id="cb_reference" value="false"/>reference
+            <input type="checkbox" id="cb_cur" />cur_obj_only
+            <input type="checkbox" id="cb_useless" checked="checked"/>useless
+            <input type="checkbox" id="cb_reference" />reference
         </article>
     </div>
 </section>
